--- a/client/index.html
+++ b/client/index.html
@@ -68,7 +68,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
 
     <!-- Add your google api key here like  src="https://maps.google.com/maps/api/js?key=YOUR_KEY_HERE"-->
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyB_0BjQATA9lZeZ2d81AAAUiGKRJNs559g"></script>
+    <!-- <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyB_0BjQATA9lZeZ2d81AAAUiGKRJNs559g"></script> -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYtJhTe_OTZDIC4ghxYr8WSBpbqfOuoY8"
+  type="text/javascript"></script>
+
     <script src="auth/auth.js"></script>
     <script src="lists/lists.js"></script>
     <script src="jobs/jobs.js"></script>
